samples/_failures_safe/1761526918_7f133b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cdbc5ef0.c: In function ‘print_compression_info’:
./samples/SAFE/__tmp_cdbc5ef0.c:172:5: error: expected declaration or statement at end of input
  172 |     printf("\n");
      |     ^~~~~~
